corrected the spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html,body
 {
     height: 100vh;
     width: 100%;
-    background: url(assets\services_icons\backgrounds\h_img.jpg);
+    background: url("assets/services_icons/backgrounds/h_img.jpg");
     background-size: cover;
     justify-content: center;
     align-content: center
